@@ -1,23 +1,8 @@
-# Example of custom Java runtime using jlink in a multi-stage container build
-FROM eclipse-temurin:25 AS jre-build
-
-# Create a custom Java runtime
-RUN $JAVA_HOME/bin/jlink \
-         --add-modules java.base \
-         --strip-debug \
-         --no-man-pages \
-         --no-header-files \
-         --compress=zip-9 \
-         --output /javaruntime
-
-FROM debian:stable-slim
+FROM eclipse-temurin:25-jre
 HEALTHCHECK --start-period=30s CMD curl --fail http://localhost:8080 || exit 1
 VOLUME /tmp/boat
-ENV JAVA_HOME=/opt/java/openjdk
-ENV PATH="${JAVA_HOME}/bin:${PATH}"
-COPY --from=jre-build /javaruntime $JAVA_HOME
 SHELL ["/bin/bash", "-c"]
-RUN apt-get update && apt-get install -y curl unzip dnsutils \
+RUN apt-get update && apt-get install -y curl unzip dnsutils && apt-get clean \
 && curl https://rclone.org/install.sh -o install.sh && chmod +x install.sh && ./install.sh && rm -f ./install.sh
 #&& rm -rf /tmp/*
 ENV PATH="${PATH}:./jre/bin"
